# WebEyeTrack

docs/evaluation/: 2026-07-05-automated-gaze-eval-proposal.md
docs/research/: 2026-07-04 head pose improvement research.txt  webeyetrack-accuracy-investigation.md
python/: pyproject.toml
python/demo/: calibration_widget.py  main.py  pyproject.toml
python/webeyetrack/: data_protocols.py  vis.py  webeyetrack.py
