[project]
name = "webeyetrack"
version = "0.0.1"
description = "WebEyeTrack: Robust & Scalable Gaze Tracking for Web Applications"
authors = [
    {name = "Eduardo Davalos", email="eduardo.davalos.anaya@vanderbilt.edu"}
]
license = 'MIT'
readme = "README.md"
requires-python = ">=3.10, <3.13" # 3.9 is EOL (2025-10); capped <3.13 because the pinned mediapipe==0.10.21 (see deps) has no 3.13 wheels

keywords = ["eye-tracking", "scalable", "rgb", "gaze"]

classifiers = [
    "Programming Language :: Python :: 3"
]

dependencies = [
    # webeyetrack.vis uses the legacy `mediapipe.solutions` API, which was
    # dropped from the wheels after 0.10.21 (gone in 0.10.30/0.10.31+, see
    # google-ai-edge/mediapipe#6192). 0.10.21 is the last release that ships it,
    # and its wheels only cover Python 3.10-3.12 — hence requires-python <3.13.
    'mediapipe==0.10.21',
    'numpy',
    "opencv-python",
    "scipy",
    "tensorflow",
]

[project.optional-dependencies]
threed = [
    'trimesh',
    'open3d'
]

[project.urls]
homepath = "https://redforestai.github.io/WebEyeTrack/"
repository = "https://github.com/RedForestAI/WebEyeTrack"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/stable/userguide/datafiles.html
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
webeyetrack = [
    "model_weights/*",
]

[tool.ruff]
ignore = ["E501"]
select = ["E", "W", "F", "C", "B", "I"]
ignore-init-module-imports = true
fixable = ["I001"]  # isort fix only

# Reference:
# https://stackoverflow.com/questions/4673373/logging-within-pytest-tests

[tool.pytest.ini_options]
asyncio_mode = 'auto'

# Logging + CLI
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s.%(msecs)03d [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Timeout
faulthandler_timeout=300

# Ignore warnings
filterwarnings = "ignore::DeprecationWarning"

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')"
]